--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -1,13 +1,6 @@
 {%- if product.media.size > 0 -%}
   {%- assign selected_media = product.selected_variant.featured_media | default: product.featured_media -%}
 
-  {%- for testproduct in settings.a_b_test_products -%}
-    {%- if testproduct.id == product.id -%}
-     {%- assign a_b_test_product_id = true -%}
-     {% break %}
-    {%- endif -%}
-  {%- endfor -%}
-
   {%- comment -%}
     IMPLEMENTATION NOTE: Shopify does not natively offers a way to create a set of images per variant. This is often
     pretty limited when you have a lot of colors and would like to only see the images specific to a given color. To
@@ -172,7 +165,7 @@
                   {%- assign loading = 'lazy' -%}
                 {%- endif -%}
 
-                {%- if first_image and a_b_test_product_id and product.metafields.a_b_test.product_image_1 != blank -%}
+                {%- if first_image and product.id == settings.a_b_test_product_id and product.metafields.a_b_test.product_image_1 != blank -%}
                   {{- product.metafields.a_b_test.product_image_1 | image_url: width: media.width | image_tag: loading: loading, sizes: '(max-width: 999px) calc(100vw - 48px), 640px', widths: '400,500,600,700,800,900,1000,1100,1200,1300,1400,1500,1600,1700,1800' -}}
                 {%- else -%}
                   {%- if should_reveal -%}
@@ -332,7 +325,7 @@
 
                 <button type="button" tabindex="-1" {% if settings.reveal_product_media and is_media_filtered == false %}reveal{% endif %} class="product__thumbnail-item {% if is_media_filtered %}is-filtered{% endif %} {% unless section.settings.show_thumbnails_on_mobile %}hidden-pocket{% endunless %}" {% if selected_media.id == media.id %}aria-current="true"{% endif %} aria-controls="product-{{ section.id }}-{{ media.id }}" data-media-id="{{ media.id }}" data-action="select">
                   <div class="product__thumbnail">
-                    {%- if first_image and a_b_test_product_id -%}
+                    {%- if first_image and product.id == settings.a_b_test_product_id -%}
                       {{ product.metafields.a_b_test.product_image_1 | image_url: width: media.preview_image.width | image_tag: loading: 'lazy', sizes: '(max-width: 999px) 72px, 60px', widths: '60,72,120,144,180,216,240,288' }}
                     {%- else -%}
                       {{ media.preview_image | image_url: width: media.preview_image.width | image_tag: loading: 'lazy', sizes: '(max-width: 999px) 72px, 60px', widths: '60,72,120,144,180,216,240,288' }}
