--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -116,7 +116,7 @@ IMPLEMENTATION NOTE: the header in Focal is pretty complex as it allows a lot of
   {%- endif -%}
 </style>
 
-<store-header {% if section.settings.enable_sticky_header %}sticky{% endif %} {% if request.page_type == 'index' and section.settings.enable_transparent_header %}transparent{% endif %} class="header {% if settings.background == settings.header_background %}header--bordered{% endif %} {% if request.page_type == 'index' and section.settings.enable_transparent_header %}header--transparent{% endif %} {{ template.suffix }}" role="banner">
+<store-header {% if section.settings.enable_sticky_header %}sticky{% endif %} {% if request.page_type == 'index' and section.settings.enable_transparent_header %}transparent{% endif %} class="header {% if settings.background == settings.header_background %}header--bordered{% endif %} {% if request.page_type == 'index' and section.settings.enable_transparent_header %}header--transparent{% endif %}" role="banner">
   {%- assign menu = section.settings.navigation_menu -%}
 
   <div class="container">
@@ -178,7 +178,7 @@ IMPLEMENTATION NOTE: the header in Focal is pretty complex as it allows a lot of
       {%- endcapture -%}
 
       {%- if request.page_type == 'index' -%}
-        <h1 class="header__logo">{{ logo }}</h1>
+        <p class="header__logo">{{ logo }}</p>
       {%- else -%}
         <span class="header__logo">{{ logo }}</span>
       {%- endif -%}
@@ -411,13 +411,48 @@ SEARCH DRAWER
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": {{ shop.name | json }},
-    {% if section.settings.logo %}
-      {% assign image_size = section.settings.logo.width | append: 'x' %}
-      "logo": {{ section.settings.logo | img_url: image_size | prepend: 'https:' | json }},
-    {% endif %}
-    "url": {{ shop.url | append: page.url | json }}
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": {{ shop.primary_domain.url | append: '#organization' | json }},
+        "name": {{ shop.name | json }},
+        "url": {{ shop.primary_domain.url | json }}
+        {%- if settings.logo != blank -%},
+        "logo": {{ settings.logo | image_url: width: 512 | json }},
+        "image": {{ settings.logo | image_url: width: 512 | json }}
+        {%- endif -%},
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Mittelweg 5",
+          "addressLocality": "Berlin",
+          "postalCode": "10117",
+          "addressCountry": "DE"
+        }
+        {%- if shop.phone != blank -%},
+        "telephone": {{ shop.phone | json }}
+        {%- endif -%}
+      },
+      {
+        "@type": "LocalBusiness",
+        "name": {{ shop.name | json }},
+        "url": {{ shop.primary_domain.url | json }}
+        {%- if settings.logo != blank -%},
+        "logo": {{ settings.logo | image_url: width: 512 | json }},
+        "image": {{ settings.logo | image_url: width: 512 | json }}
+        {%- endif -%},
+        "priceRange": "€€",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Mittelweg 5",
+          "addressLocality": "Berlin",
+          "postalCode": "10117",
+          "addressCountry": "DE"
+        }
+        {%- if shop.phone != blank -%},
+        "telephone": {{ shop.phone | json }}
+        {%- endif -%}
+      }
+    ]
   }
 </script>
 
