--- a/snippets/microdata-schema.liquid
+++ b/snippets/microdata-schema.liquid
@@ -38,7 +38,42 @@ or change the format of some info
           {%- elsif is_barcode_available %}
             "mpn": {{ product.selected_or_first_available_variant.barcode | json }},
           {%- endif %}
-          "url": "{{ product.url }}?variant={{ variant.id }}"
+          "url": "{{ product.url }}?variant={{ variant.id }}",
+          "shippingDetails": {
+            "@type": "OfferShippingDetails",
+            "shippingRate": {
+              "@type": "MonetaryAmount",
+              "value": "0",
+              "currency": {{ cart.currency.iso_code | json }}
+            },
+            "shippingDestination": {
+              "@type": "DefinedRegion",
+              "addressCountry": "DE"
+            },
+            "deliveryTime": {
+              "@type": "ShippingDeliveryTime",
+              "handlingTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 1,
+                "maxValue": 2,
+                "unitCode": "DAY"
+              },
+              "transitTime": {
+                "@type": "QuantitativeValue",
+                "minValue": 2,
+                "maxValue": 5,
+                "unitCode": "DAY"
+              }
+            }
+          },
+          "hasMerchantReturnPolicy": {
+            "@type": "MerchantReturnPolicy",
+            "applicableCountry": "DE",
+            "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+            "merchantReturnDays": 30,
+            "returnMethod": "https://schema.org/ReturnByMail",
+            "returnFees": "https://schema.org/FreeReturn"
+          }
         }{% unless forloop.last %},{% endunless %}
       {%- endfor -%}
     ],
@@ -108,6 +143,91 @@ or change the format of some info
       {%- endfor -%}
     ]
   {%- endcapture -%}
+{%- elsif request.page_type == 'collection' -%}
+  {%- capture main_entity_microdata -%}
+    "@type": "CollectionPage",
+    "name": {{ collection.title | json }},
+    "description": {{ collection.description | strip_html | json }},
+    "url": "{{ shop.url }}{{ collection.url }}",
+    "mainEntity": {
+      "@type": "ItemList",
+      "numberOfItems": {{ collection.products_count | json }},
+      "itemListElement": [
+        {%- for product in collection.products limit: 12 -%}
+          {
+            "@type": "ListItem",
+            "position": {{ forloop.index }},
+            "item": {
+              "@type": "Product",
+              "name": {{ product.title | json }},
+              "description": {{ product.description | strip_html | truncatewords: 50 | json }},
+              "url": "{{ shop.url }}{{ product.url }}",
+              "image": {
+                "@type": "ImageObject",
+                "url": "https:{{ product.featured_image | image_url: width: 600 }}",
+                "width": "600",
+                "height": "600"
+              },
+              "brand": {
+                "@type": "Brand",
+                "name": {{ product.vendor | json }}
+              },
+              "offers": {
+                "@type": "Offer",
+                "price": {{ product.price | divided_by: 100.0 | json }},
+                "priceCurrency": {{ cart.currency.iso_code | json }},
+                "priceValidUntil": "{{ 'now' | date: '%s' | plus: days_product_price_valid_until | date: '%Y-%m-%d' }}",
+                "availability": {%- if product.available -%}"https://schema.org/InStock"{%- else -%}"https://schema.org/OutOfStock"{%- endif -%},
+                "url": "{{ shop.url }}{{ product.url }}",
+                "shippingDetails": {
+                  "@type": "OfferShippingDetails",
+                  "shippingRate": {
+                    "@type": "MonetaryAmount",
+                    "value": "0",
+                    "currency": {{ cart.currency.iso_code | json }}
+                  },
+                  "shippingDestination": {
+                    "@type": "DefinedRegion",
+                    "addressCountry": "DE"
+                  },
+                  "deliveryTime": {
+                    "@type": "ShippingDeliveryTime",
+                    "handlingTime": {
+                      "@type": "QuantitativeValue",
+                      "minValue": 1,
+                      "maxValue": 2,
+                      "unitCode": "DAY"
+                    },
+                    "transitTime": {
+                      "@type": "QuantitativeValue",
+                      "minValue": 2,
+                      "maxValue": 5,
+                      "unitCode": "DAY"
+                    }
+                  }
+                },
+                "hasMerchantReturnPolicy": {
+                  "@type": "MerchantReturnPolicy",
+                  "applicableCountry": "DE",
+                  "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
+                  "merchantReturnDays": 30,
+                  "returnMethod": "https://schema.org/ReturnByMail",
+                  "returnFees": "https://schema.org/FreeReturn"
+                }
+              }
+              {%- if product.metafields.reviewscouk.total != blank and product.metafields.reviewscouk.rating != blank -%}
+                ,"aggregateRating": {
+                  "@type": "AggregateRating",
+                  "ratingValue": "{{ product.metafields.reviewscouk.rating }}",
+                  "reviewCount": "{{ product.metafields.reviewscouk.total }}"
+                }
+              {%- endif -%}
+            }
+          }{%- unless forloop.last -%},{%- endunless -%}
+        {%- endfor -%}
+      ]
+    }
+  {%- endcapture -%}
 {%- endif -%}
 
 {%- capture breadcrumb_entity_microdata -%}
@@ -116,7 +236,11 @@ or change the format of some info
       "@type": "ListItem",
       "position": 1,
       "name": {{ 'general.breadcrumb.home' | t | json }},
-      "item": "{{ shop.url }}"
+      "item": {
+        "@type": "WebPage",
+        "@id": "{{ shop.url }}",
+        "name": {{ 'general.breadcrumb.home' | t | json }}
+      }
     }
 
     {%- if request.page_type == 'product' -%}
@@ -125,19 +249,31 @@ or change the format of some info
           "@type": "ListItem",
           "position": 2,
           "name": {{ collection.title | json }},
-          "item": "{{ shop.url }}{{ collection.url }}"
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ collection.url }}",
+            "name": {{ collection.title | json }}
+          }
         }, {
           "@type": "ListItem",
           "position": 3,
           "name": {{ product.title | json }},
-          "item": "{{ shop.url }}{{ product.url }}"
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ product.url }}",
+            "name": {{ product.title | json }}
+          }
         }
       {%- else -%}
         ,{
           "@type": "ListItem",
           "position": 2,
           "name": {{ product.title | json }},
-          "item": "{{ shop.url }}{{ product.url }}"
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ product.url }}",
+            "name": {{ product.title | json }}
+          }
         }
       {%- endif -%}
     {%- elsif request.page_type == 'collection' -%}
@@ -145,33 +281,53 @@ or change the format of some info
           "@type": "ListItem",
           "position": 2,
           "name": {{ collection.title | json }},
-          "item": "{{ shop.url }}{{ collection.url }}"
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ collection.url }}",
+            "name": {{ collection.title | json }}
+          }
         }
     {%- elsif request.page_type == 'blog' -%}
         ,{
           "@type": "ListItem",
           "position": 2,
           "name": {{ blog.title | json }},
-          "item": "{{ shop.url }}{{ blog.url }}"
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ blog.url }}",
+            "name": {{ blog.title | json }}
+          }
         }
     {%- elsif request.page_type == 'article' -%}
         ,{
           "@type": "ListItem",
           "position": 2,
           "name": {{ blog.title | json }},
-          "item": "{{ shop.url }}{{ blog.url }}"
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ blog.url }}",
+            "name": {{ blog.title | json }}
+          }
         }, {
           "@type": "ListItem",
           "position": 3,
-          "name": {{ blog.title | json }},
-          "item": "{{ shop.url }}{{ article.url }}"
+          "name": {{ article.title | json }},
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ article.url }}",
+            "name": {{ article.title | json }}
+          }
         }
     {%- elsif request.page_type == 'page' -%}
        ,{
           "@type": "ListItem",
           "position": 2,
           "name": {{ page.title | json }},
-          "item": "{{ shop.url }}{{ page.url }}"
+          "item": {
+            "@type": "WebPage",
+            "@id": "{{ shop.url }}{{ page.url }}",
+            "name": {{ page.title | json }}
+          }
         }
     {%- endif -%}
   ]
